--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   AWS_REGION: "us-east-1" # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: "183461571101.dkr.ecr.us-east-1.amazonaws.com/devops-epic" # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: "devops-epic" # set this to your Amazon ECR repository name
   ECS_SERVICE: "arn:aws:ecs:us-east-1:183461571101:service/devops_epic_cluster/devops-epic-service" # set this to your Amazon ECS service name
   ECS_CLUSTER: "arn:aws:ecs:us-east-1:183461571101:cluster/devops_epic_cluster" # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION:
