--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: github.event.repository.name
+          IMAGE_TAG: ${{ github.event.repo.name }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
